# og-simulation

./: .gitignore  CONTRIBUTING.md  README.md
.claude/agent-memory/implementer/: MEMORY.md  build_and_test.md  initiative_docs_location.md
OGSimulation/: AutoSerialization.h  BodyId.h  CMakeLists.txt  CorrectionCache.cpp  CorrectionCache.h  DMathUtil.cpp  DMathUtil.h  DPID.cpp  DPID.h  DesyncDiagnosticSink.h  InputRedundancyBundleCodec.h  OGAssert.h  OGExport.h  OGSimulation.cpp  OGSimulation.h  OGTypes.h  PhysicsBodyAdapter.h  PhysicsBodyReaderAdapter.h  PhysicsBodyState.h  PhysicsObjectFactory.h  QueryGeometry.h  SimulatableList.h  SimulationComparisonGlm.h  SimulationComposite.h  SimulationDependencies.h  SimulationFieldDescriptors.h  SimulationIntegrationExecutor.h  SimulationLog.h  SimulationManager.cpp  SimulationManager.h  SimulationManagerConcept.h  SimulationNetSync.h  SimulationObjectStorage.h  SimulationQueues.h  SimulationReconciliation.h  SimulationSerialization.h  SimulationTimeContext.cpp  SimulationTimeContext.h  SimulationTypes.h  SpatialQueryAdapter.h  (+3 more)
OGSimulation/InputMapping/: InputActionDescriptor.h
OGSimulation/Network/: ClientInputDelayLine.h  ConnectionSlotKey.h  ConnectionTierTable.h  ReplicatedTierConsumer.h  ServerInputDelayQueue.h  ServerReceptionCoordinator.h
OGSimulation/PCTimeManagement/: ClientPredictionClock.cpp  ClientPredictionClock.h  NetworkTimeEstimator.cpp  NetworkTimeEstimator.h  ServerTickClock.cpp  ServerTickClock.h  TimeConfig.h
glm/: CMakeLists.txt
